// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`escape character 1`] = `
"// mode: acorn
'    '
"    "
"       "
"        "
"    "
"               "
'               '
'     '
'       '
'         '
"     "
"       "
"         ""
`;

exports[`regexp affect 1`] = `
"// mode: acorn
[
  / /,
  ' ',
  / /,
  " "
]"
`;

exports[`strings comment nested 1`] = `
"// mode: acorn
                    
const a = "    "
                    "
`;

exports[`strings comment nested 2`] = `
"// mode: acorn
                    
const a = "    "
                    "
`;

exports[`strings comment nested 3`] = `
"// mode: acorn
                    
const a = "    "
                    "
`;

exports[`strings comment nested 4`] = `
"// mode: acorn
const a = "    "
console.log("       ")"
`;

exports[`strings comment nested 5`] = `
"// mode: acorn
const a = "    "
console.log("       ")
const b = "    ""
`;

exports[`strings comment nested 6`] = `
"// mode: acorn
const a = "    "
console.log("       ")
const b = "    ""
`;

exports[`strings comment nested 7`] = `
"// mode: acorn
const a = "    "
console.log("       ")
const b = "    ""
`;

exports[`works 1`] = `
"// mode: acorn
           
const a = '    '
              
const b = "    "
  
             
  
                 
                            
const c = \`   \${a}\`

let d = /      /g"
`;
